# Swarm

./: .gitignore  CMakeLists.txt  README.md  STATUS.md  darwin_core.yaml  validation_smoke_200_500_ocean10000_seed1337.json
config/: default.toml
src/: main.cpp
src/core/: agent.cpp  agent.h  chromosome.cpp  chromosome.h  decoder.cpp  decoder.h  genome.cpp  genome.h  ocean.cpp  ocean.h  swarm.cpp  swarm.h
src/economy/: chip_manager.cpp  chip_manager.h  inheritance.cpp  inheritance.h  transfer.cpp  transfer.h
src/evolution/: crossover.cpp  crossover.h  lifecycle.cpp  lifecycle.h  mutation.cpp  mutation.h  reproduction.cpp  reproduction.h
src/poker/: card.h  deck.h  hand_evaluator.h  pot_manager.h  table.h
src/scheduler/: activity_scheduler.cpp  activity_scheduler.h  table_manager.cpp  table_manager.h  time_manager.cpp  time_manager.h
src/sim/: population.cpp  population.h  simulation.cpp  simulation.h  statistics.cpp  statistics.h
src/social/: face.cpp  face.h  info_exchange.cpp  info_exchange.h  mate_selection.cpp  mate_selection.h
src/util/: rng.h
test/: test_poker.cpp
